# api/models/active_insulin_duration.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ActiveInsulinDuration active insulin duration
+//
+// swagger:model ActiveInsulinDuration
+type ActiveInsulinDuration struct {
+
+	// duration
+	Duration string `json:"Duration,omitempty"`
+}
+
+// Validate validates this active insulin duration
+func (m *ActiveInsulinDuration) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this active insulin duration based on context it is used
+func (m *ActiveInsulinDuration) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ActiveInsulinDuration) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ActiveInsulinDuration) UnmarshalBinary(b []byte) error {
+	var res ActiveInsulinDuration
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
