# api/models/correction_range.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CorrectionRange correction range
+//
+// swagger:model CorrectionRange
+type CorrectionRange struct {
+
+	// end
+	End int64 `json:"End,omitempty"`
+
+	// start
+	Start int64 `json:"Start,omitempty"`
+}
+
+// Validate validates this correction range
+func (m *CorrectionRange) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this correction range based on context it is used
+func (m *CorrectionRange) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CorrectionRange) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CorrectionRange) UnmarshalBinary(b []byte) error {
+	var res CorrectionRange
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
