# api/models/response_data.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ResponseData response data
+//
+// swagger:model ResponseData
+type ResponseData struct {
+
+	// data
+	Data interface{} `json:"Data,omitempty"`
+
+	// error
+	Error interface{} `json:"Error,omitempty"`
+
+	// status
+	Status int64 `json:"Status,omitempty"`
+}
+
+// Validate validates this response data
+func (m *ResponseData) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this response data based on context it is used
+func (m *ResponseData) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ResponseData) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ResponseData) UnmarshalBinary(b []byte) error {
+	var res ResponseData
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
