# api/models/users.go
@@ -1,0 +1,56 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Users users
+//
+// swagger:model Users
+type Users struct {
+
+	// password
+	Password string `json:"Password,omitempty"`
+
+	// Uid
+	UID string `json:"Uid,omitempty"`
+
+	// username
+	Username string `json:"Username,omitempty"`
+}
+
+// Validate validates this users
+func (m *Users) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this users based on context it is used
+func (m *Users) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Users) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Users) UnmarshalBinary(b []byte) error {
+	var res Users
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
